Added script dependencies to index.html file.

--- a/Space Invaders/index.html
+++ b/Space Invaders/index.html
@@ -6,6 +6,9 @@
         <script src="js/boot.js"></script>
         <script src="js/menu.js"></script>
         <script src="js/game.js"></script>
+        <script src="js/utils.js"></script>
+        <script src="js/globaldependencies.js"></script>
+        <script src="js/prefabs.js"></script>
         <script src="js/main.js"></script>
     </head>
     <style>
